# HuskyApply

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  PROJECT_STATUS.md  README.md
.github/workflows/: ci.yml  main.yml  performance-tests.yml  release.yml
brain/: Dockerfile  Makefile  README.md  __init__.py  ai_chain.py  document_processor.py  exceptions.py  generate_proto.sh  grpc_server.py  main.py  model_router.py  monitoring.py  pyproject.toml  resource_manager.py  resume_analysis_chain.py  retry_utils.py  semantic_cache.py  skills_matching_engine.py  streaming_ai_chain.py  streaming_handler.py  tracing_utils.py  validate.py  vector_database.py
brain/config/: optimization.py  production.py  resource_config.py  streaming_config.py  vector_cache_config.py
brain/grpc_generated/: job_processing_pb2.py  job_processing_pb2.pyi  job_processing_pb2_grpc.py  job_processing_pb2_grpc.pyi
brain/tests/: test_ai_chain.py  test_integration.py  test_main.py
docs/: README.md  architecture.md
docs/appendix/: API_Documentation.md  Deployment_Guide.md  Development_Guide.md
frontend/: animations.css  app.js  auth.js  components.css  index.html  manifest.json  styles.css  sw.js
frontend/config/: README.md  config.production.js
frontend/core/: app-core.js
frontend/core/modules/: auth.js  form.js  notifications.js  processing.js  pwa.js  ui-enhancements.js  ui.js
frontend/modules/: core.js  dashboard.js  form-enhancements.js  job-submission.js  mobile-optimizations.js  onboarding.js  trial-mode.js  user-analytics.js
frontend/styles/: critical.css  enhanced-ui.css  form-enhancements.css  non-critical.css  onboarding.css  pwa-components.css
frontend/utils/: performance-monitor.js
gateway/: Dockerfile  pom.xml  validate-gateway.sh
gateway/src/main/java/com/huskyapply/gateway/: GatewayApplication.java
gateway/src/main/java/com/huskyapply/gateway/annotation/: ReadOnly.java  WriteOnly.java
gateway/src/main/java/com/huskyapply/gateway/audit/: AuditLogger.java
gateway/src/main/java/com/huskyapply/gateway/config/: AdvancedCacheConfig.java  AdvancedPerformanceConfig.java  AdvancedPerformanceConfig.java.disabled  AdvancedRabbitConfig.java  AdvancedSecurityConfig.java  BrainGrpcClientConfig.java  CacheConfig.java  (+20 more)
gateway/src/main/proto/: job_messages.proto  job_processing.proto
gateway/src/main/resources/: application-prod.properties  application.properties
gateway/src/main/resources/db/migration/: V10__Create_Partitioned_Tables.sql  V11__Add_Job_Tracking_System.sql  V1__Create_jobs_table.sql  V2__Create_artifacts_table.sql  V3__Create_users_table.sql  V4__Add_user_associations.sql  V5__Add_batch_jobs.sql  V6__Add_model_selection_to_batch_jobs.sql  V7__Add_subscription_system.sql  V8__Add_Performance_Indexes.sql  V9__Add_Dashboard_Materialized_View.sql
ops/infra/: docker-compose.dev.yml  docker-compose.yml  monitoring-config.yaml  security-enhancement-config.yaml
ops/infra/logging/: filebeat.yml  logback-spring.xml
ops/infra/postgres/: init-replication.sh  pg_hba-master.conf  postgresql-master.conf  postgresql-replica.conf  setup-replica.sh
ops/infra/proto/: build.gradle  connection_mgmt.proto  job_processing.proto  requirements.txt
ops/k8s/: advanced-hpa.yaml  brain.yaml  cdn-performance.yaml  cluster-autoscaler.yaml  configmap.yaml  frontend.yaml  gateway.yaml  ingress.yaml  monitoring.yaml  namespace.yaml  postgres.yaml  prometheus-adapter.yaml  rabbitmq.yaml  redis.yaml  scaling-dashboard.json  secrets.example.yaml
ops/scripts/: deploy-hpa-v2.sh  deploy-release.sh  deploy.sh  docker-monitor.sh  docker-optimize.sh  multi-region-deploy.sh  production-deployment-checklist.sh
scripts/: backup-restore.sh  clean_all.sh  generate-certs.sh  health-check.sh  load-test.js  migrate-grpc.sh  performance-test-suite.sh  prepush_check.sh  smoke-tests.sh  test-10x-scaling.js  test-grpc-migration.sh
(+86 files in other folders)
